# AliOS-Things

./: .aos  .components.db  .gdbinit  .gitattributes  .gitignore  .travis.yml  1.diff  AliOS Things Microkernel Release Note.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README-zh.md  README.md  h origin mybranch  make_fs.sh  package.yaml  platform - Shortcut.lnk  setup.py
application/example/lwm2mapp/client/: CMakeLists.txt  lwm2mclient.c  object_access_control.c  object_device.c
components/SDL2/src/image/: Android.mk  CHANGES.txt  IMG.c  IMG_ImageIO.m  IMG_UIImage.m  IMG_WIC.c  IMG_bmp.c  IMG_gif.c  IMG_jpg.c  IMG_pcx.c  IMG_svg.c  IMG_tga.c  IMG_tif.c  IMG_xpm.c  IMG_xxx.c  Makefile  Makefile.am  README.txt  SDL2_image.pc  SDL2_image.spec.in  config.status  configure.in  libtool  miniz.h  nanosvg.h  version.rc
components/alicloud/core/: CMakeLists.txt
components/alicloud/core/src/: CommonRequest.cc  CommonResponse.cc  Credentials.cc  CredentialsProvider.cc  CurlHttpClient.cc  CurlHttpClient.h  EcsMetadataFetcher.h  EndpointProvider.cc  Error.cc  HttpResponse.cc  InstanceProfileCredentialsProvider.cc  RoaServiceClient.cc  RoaServiceRequest.cc  RpcServiceRequest.cc  Runnable.cc  Signer.cc  Url.cc
components/alicloud/examples/cdn/: CMakeLists.txt  cdn.cc
components/alicloud/examples/ecs/: CMakeLists.txt  ecs.cc
components/alicloud/examples/slb/: CMakeLists.txt  slb.cc
components/alicloud/examples/vpc/: CMakeLists.txt  vpc.cc
components/alicloud/facebody/: CMakeLists.txt  aos.mk
components/alicloud/objectdet/: CMakeLists.txt  Config.in  aos.mk
components/amp/: .gitignore  CMakeLists.txt  Config.in  Makefile  Makefile.ec100y  README.md  aos.mk  package.yaml
components/amp/adapter/: Config.in  Makefile  aos.mk
components/amp/adapter/include/: amp_audio.h  amp_fs.h
components/amp/ampsim/: CMakeLists.txt  amp_stub.c  ampsim.c
components/amp/aos_config/: amp_config.h
components/amp/components/das/: Makefile  aos.mk
components/amp/components/http/: Config.in  Makefile  aos.mk
components/amp/entry/: amp_entry.c
components/amp/example/: amp_example.c
components/amp/example-js/: bt_host.js  crypto.js  events.js  fs.js  gateway.js  http.js  mqtt.js  ota.js  rtc.js  spi.js  tcp.js  uart.js  udp.js
components/amp/jslib/: gen_bytecode.bat  gen_bytecode.sh  gen_bytecode_linux.sh  gen_bytecode_macos.sh  qjsc  qjsc_macos
components/amp/jsmodules/: ds18b20.js
components/amp/libjs/: .babelrc  README.md  build.js  generator.js  init.js  package-lock.json  package.json
components/amp/main/: Config.in  Makefile  amp_defines.h  amp_engine.c  amp_main.c  amp_task.c  amp_task.h
components/amp/modules/: DS18B20.js  ap3216c.js  mpu6050.js  qlc5883.js  sh1106.js  si7006.js  spl06.js
components/amp/services/: Config.in  Makefile  aos.mk
components/amp/test/: test_DS18B20.js  test_ap3216c.js  test_fs.js  test_iot.js  test_kv.js  test_mpu6050.js  test_mqtt.js  test_qlc5883.js  test_sh1106.js  test_si7006.js  test_spl06.js  test_tcp.js  test_udp.js
components/amp/tools/: config.mk  rules.mk
components/network/sal/: CMakeLists.txt  Config.in  aos.mk
components/py_engine/: .gitignore  CMakeLists.txt  Config.in  README.md  aos.mk  build_cmake.sh  build_lib_copy.sh  call_cmake.sh  create_python_home.py  package.yaml  package.yaml-bak  py_engine_prepare.py
components/py_engine/adapter/: haas_main.h  main.c
components/py_engine/example/: example.mk  py_engine_example.c
components/py_engine/framework/: ap3216c.py  iot.py  mpu6050.py  network.py  qmc5883.py  sh1106.py  si7006.py  speech_utils.py  spl06.py  st7789py.py
components/py_engine/micropython/: README.md  aos.mk
components/py_engine/micropython-lib/: LICENSE  README.md
components/py_engine/minicv/: aos.mk
components/py_engine/modules/: config.cmake  modules-config.cmake  modules-config.mk  portmod.cmake
components/py_engine/mpy-cross/: mpconfigport.h  mpy-cross.vcxproj
components/py_engine/mpy_adaptor/: mpy_main.c  mpy_main.h  py.mk
components/py_engine/mpy_engine/: py.mk
components/py_engine/platform/: aos.mk
components/py_engine/tests/: README  run-tests  timerisr.py  tinytest.py
components/service/ucloud/: .travis.yml  CMakeLists.txt  Config.in  README-CN.md  aos.mk
components/uvoice/: CMakeLists.txt  README.md  get_open_source.py  package.yaml  uvoice.c
components/uvoice/audio/: audio_aec.c  audio_aec.h  audio_common.c  audio_common.h  audio_mixer.c  audio_mixer.h  audio_process.c  audio_stream.c  audio_stream.h  audio_trigger.c  audio_vad.c  audio_vad.h
components/uvoice/codec/: amr_decoder.c  amr_encoder.c  amrwb_decoder.c  amrwb_encoder.c  ogg_decoder.c  opus_encoder.c  pvaac_decoder.c  pvmp3_decoder.c  spx_decoder.c
components/uvoice/common/: event.c
components/uvoice/connect/: uvoice_ws.h
components/uvoice/example/: uvoice_example.c
components/uvoice/include/: uvoice_event.h  uvoice_init.h  uvoice_mlist.h  uvoice_player.h  uvoice_recorder.h  uvoice_test.h  uvoice_types.h
components/uvoice/internal/: uvoice_alios.h  uvoice_amp.h  uvoice_aos.h  uvoice_audio.h  uvoice_codec.h  uvoice_common.h  uvoice_format.h  uvoice_linux.h  uvoice_message.h  uvoice_os.h  uvoice_pcm.h  uvoice_play.h  uvoice_record.h  uvoice_resampler.h  uvoice_ringbuffer.h  uvoice_wave.h
components/uvoice/media/: uvoice_codec.c  uvoice_format.c  uvoice_mlist.c  uvoice_player.c  uvoice_recorder.c  uvoice_wave.c
components/uvoice/stream/: uvoice_cache.c  uvoice_download.c  uvoice_download.h  uvoice_file.c  uvoice_hls.c  uvoice_hls.h  uvoice_http.c  uvoice_partition.c  uvoice_ssl.c
components/uvoice/test/: test_main.c  test_player.c  test_recorder.c  test_swid.c  test_tts.c
middleware/linkkit/sdk-c/: .config  CMakeLists.txt  Config.in  Config.linkkit  Kconfig  README.md  README.txt  aos.makefile  aos.mk  make.settings  makefile  project.mk  sdk-c.mk  win.makefile  win_board_conf.mk
middleware/uagent/uota/: CMakeLists.txt  Config.in  Makefile  README.md  aos.mk  iot.mk  ota_service.c  ucube.py  uota.mk
modules/lwesp/: CMakeLists.txt  package.yaml  port.cmake  port.mk  test.c
(+55646 files in other folders)
